Dynamic-access coverage for scala.reflect.internal.util.AbstractFileClassLoader (61/76)