@@ -24,6 +24,10 @@ java {
     }
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
+
 graalvmNative {
     agent {
         defaultMode = "conditional"
@@ -31,6 +35,11 @@ graalvmNative {
             conditional {
                 userCodeFilterPath = "user-code-filter.json"
             }
+        }
+    }
+    binaries {
+        all {
+            buildArgs.addAll(['--add-opens=java.base/java.lang=ALL-UNNAMED'])
         }
     }
 }
